# rivals-prototype

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  manage.py  pyproject.toml  pytest.ini  tailwind.config.js
.kamal/: secrets
.kamal/hooks/: post-deploy  pre-deploy
accounts/: emails.py  forms.py  models.py  tasks.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_active_user_fpl_id_user_manager_name_user_team_and_more.py  0003_alter_user_team.py  0004_user_mini_leagues.py
api/: planning_views.py  serializers.py  tests.py  urls.py  views.py
assets/css/: input.css  output.css
config/: deploy.yml
core/: urls.py  views.py
dbs/: note.txt
rivals/: apps.py  models.py  urls.py  views.py
rivals/migrations/: 0001_initial.py  0002_alter_gameweekdata_team_and_more.py  0003_alter_trackedteam_user_and_more.py  0004_alter_gameweekdata_bench_points_and_more.py  0005_transfer_planning.py
rivals/services/: fpl_api_service.py  init_user_service.py  landing_data_service.py  mini_league_sync_service.py  player_sync_service.py  team_analysis_service.py  team_sync_service.py  transfer_player_association_service.py
rivals/templatetags/: date_filters.py  math_filters.py
rivals/views/: dashboard_views.py  minileague_views.py  team_views.py
rivalspy/: asgi.py  settings.py  urls.py  wsgi.py
templates/accounts/: login.html  signup.html  verification_pending.html
templates/pages/: dashboard.html  index.html  landing.html
templates/partials/: analysis.html  rival_comparison_quick.html
tests/unit/: test_accounts.py  (+1 more)
(+18 files in other folders)
