[project]
name = "rivalspy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "django-cotton>=2.1.3",
    "django-debug-toolbar>=6.0.0",
    "pylint>=3.3.8",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "rivalspy.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = "Test*"
python_functions = "test_*"
addopts = ["--cov=apps", "--cov-report=html", "--cov-report=term-missing", "--reuse-db"]
